--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="images/me.jpg" alt="Preeti Gupta">
+                    <img src="images/hero.jpg" alt="Preeti Gupta">
                 </div>
                 <div class="about-text">
                     <h3>Hi, I'm Preeti Gupta</h3>
@@ -1152,7 +1152,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-img">
-                        <img src="images/1.jpg" alt="Pre-Wedding Shoot">
+                        <img src="images/2.jpg" alt="Pre-Wedding Shoot">
                     </div>
                     <div class="service-content">
                         <h3>Pre-Wedding Shoot</h3>
@@ -1190,7 +1190,7 @@
             </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-category="bridal">
-                    <img src="/api/placeholder/280/300" alt="Bridal Makeup" class="portfolio-img">
+                    <img src="images/po1.jpg" alt="Bridal Makeup" class="portfolio-img">
                     <div class="portfolio-overlay">
                         <div class="portfolio-details">
                             <h3>Bridal Makeup</h3>
@@ -1200,7 +1200,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="pre-wedding">
-                    <img src="/api/placeholder/280/300" alt="Pre-Wedding Shoot" class="portfolio-img">
+                    <img src="images/po2.jpg" alt="Pre-Wedding Shoot" class="portfolio-img">
                     <div class="portfolio-overlay">
                         <div class="portfolio-details">
                             <h3>Pre-Wedding Shoot</h3>
@@ -1210,7 +1210,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="engagement">
-                    <img src="/api/placeholder/280/300" alt="Engagement Makeup" class="portfolio-img">
+                    <img src="images/po1" alt="Engagement Makeup" class="portfolio-img">
                     <div class="portfolio-overlay">
                         <div class="portfolio-details">
                             <h3>Engagement Makeup</h3>
@@ -1231,19 +1231,19 @@
             </div>
             <div class="testimonial-slider">
                 <div class="testimonial-item active">
-                    <img src="/api/placeholder/80/80" alt="Client 1" class="testimonial-img">
+                    <img src="images/award1.jpg" alt="Client 1" class="testimonial-img">
                     <p class="testimonial-text">"Preeti did an amazing job on my bridal makeup! I felt like a princess on my wedding day. Highly recommend her!"</p>
                     <div class="testimonial-name">- Anjali Sharma</div>
                     <div class="testimonial-role">Bride</div>
                 </div>
                 <div class="testimonial-item">
-                    <img src="/api/placeholder/80/80" alt="Client 2" class="testimonial-img">
+                    <img src="images/award2.jpg" alt="Client 2" class="testimonial-img">
                     <p class="testimonial-text">"The pre-wedding shoot makeup was perfect! Preeti is a true artist and made me look stunning in every photo."</p>
                     <div class="testimonial-name">- Riya Kapoor</div>
                     <div class="testimonial-role">Bride</div>
                 </div>
                 <div class="testimonial-item">
-                    <img src="/api/placeholder/80/80" alt="Client 3" class="testimonial-img">
+                    <img src="images/award3.jpg" alt="Client 3" class="testimonial-img">
                     <p class="testimonial-text">"I couldn't have asked for a better engagement makeup. Preeti is professional and talented!"</p>
                     <div class="testimonial-name">- Priya Singh</div>
                     <div class="testimonial-role">Bride</div>
