--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             opacity: 0;
             transform: translateY(30px);
             animation: fadeInUp 1s ease forwards 0.5s;
-            background-image: url("images/me.jpg");
+            background-image: url("images/Banner.jpg");
         }
         
         .hero-content h1 {
